fixed the link text over the button. AND some spacing for it as well

--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,6 @@ body{
     top:32em;
     left:28em;
     display: block;
-    border-style: solid;
-    color: black;
 
 }
 .linkText{
@@ -53,7 +51,7 @@ body{
     /*text above my github, linkedIn, and email*/
     font-size: 13px;
     top:38.8em;
-    left:36.6em;
+    left:36em;
     color: white;
     position: absolute;
     display: block;
